The GA works, kinda...